--- a/services/user/api/etc/user.yaml
+++ b/services/user/api/etc/user.yaml
@@ -3,12 +3,12 @@ Host: 0.0.0.0
 Port: 8001
 
 Mysql:
-  DataSource: root:123456@tcp(mysql:3306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+  DataSource: root:root123456@tcp(127.0.0.1:53306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 CacheRedis:
-  - Host: redis:6379
-    Pass:
-    Type: node
+  - Host: redis:56379
+#    Pass:
+#    Type: node
 
 Auth:
   AccessSecret: uOvKLmVfztaXGpNYd4Z0I1SiT7MweJhl
@@ -18,5 +18,7 @@ Auth:
 UserRpc:
   Etcd:
     Hosts:
-      - etcd:2379
+      - 127.0.0.1:42379
+    User: root
+    Pass: root123456
     Key: user.rpc
