--- a/services/user/rpc/etc/user.yaml
+++ b/services/user/rpc/etc/user.yaml
@@ -1,17 +1,19 @@
 Name: user.rpc
-ListenOn: 0.0.0.0:9000
+ListenOn: 0.0.0.0:9001
 Salt: HWVOFkGgPTryzICwd7qnJaZR9KQ2i8xe
 
 Etcd:
   Hosts:
-    - 127.0.0.1:2379
+    - 127.0.0.1:42379
+  User: root
+  Pass: root123456
   Key: user.rpc
 
 Mysql:
-  DataSource: root:root123456@tcp(mysql:3306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+  DataSource: root:root123456@tcp(127.0.0.1:53306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 CacheRedis:
-  - Host: redis:6379
-    Type: node
-    Pass:
+  - Host: 127.0.0.1:56379
+#    Type: node
+#    Pass:
 
