refactor: update order service

--- a/services/order/rpc/etc/order.yaml
+++ b/services/order/rpc/etc/order.yaml
@@ -1,6 +1,33 @@
 Name: order.rpc
-ListenOn: 0.0.0.0:8080
+ListenOn: 0.0.0.0:9002
+
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+    - 127.0.0.1:52379
+  User: root
+  Pass: root123456
   Key: order.rpc
+
+Mysql:
+  DataSource: root:root123456@tcp(127.0.0.1:53306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+
+CacheRedis:
+  - Host: 127.0.0.1:56378
+#    Type: node
+#    Pass:
+
+UserRpc:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:52379
+    User: root
+    Pass: root123456
+    Key: user.rpc
+
+ProductRpc:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:52379
+    User: root
+    Pass: root123456
+    Key: product.rpc
