--- a/services/order/api/etc/order.yaml
+++ b/services/order/api/etc/order.yaml
@@ -6,7 +6,7 @@ Mysql:
   DataSource: root:root123456@tcp(127.0.0.1:53306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 CacheRedis:
-  - Host: 127.0.0.1:56379
+  - Host: 127.0.0.1:56378
 #    Type: node
 #    Pass:
 
@@ -14,3 +14,10 @@ Auth:
   AccessSecret: uOvKLmVfztaXGpNYd4Z0I1SiT7MweJhl
   AccessExpire: 86400
 
+OrderRpc:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:52379
+    User: root
+    Pass: root123456
+    Key: order.rpc
